--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,7 @@
     <title>Index</title>
 </head>
 <body>
-<a th:href="@{/person/personList}">Lista de pessoas</a>
+<a th:href="@{/person/personList}">Lista de pessoas</a><br/>
+<a th:href="@{/ticket/ticketList}">Lista de ingressos</a>
 </body>
 </html>
