--- a/src/main/resources/static/css/containers.css
+++ b/src/main/resources/static/css/containers.css
@@ -1,9 +1,12 @@
 .navbar {
-    background-color: var(--navColor2);
-    background: linear-gradient(90deg, var(--navColor1), var(--navColor2));
-    width: 20%;
+    box-sizing: border-box;
+    background-color: var(--bw100);
+    width: 25%;
     height: 100vh;
-    position: absolute;
+    position: fixed;
+    padding: 2%;
+    padding-top: 4%;
+    box-shadow: 2px 0px 2px #00000050;
 }
 
 .navbar ul {
@@ -14,11 +17,11 @@
 }
 
 .navbar ul li {
-    padding-left: 40px;
+    height: 40px;
 }
 
 .navbar ul li .iconBox {
-    width: 40px;
+    width: 50px;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -26,23 +29,134 @@
 }
 
 .navbar ul li .iconBox i {
-    color: #fff;
+    color: var(--fontColor1);
     width: 20px;
     height: auto;
 }
 
 
 .navbar ul li a {
-    color: #fff;
+    color: var(--fontColor1);
     width: 100%;
     height: 100%;
+    font-weight: 700;
     display: flex;
     align-items: center;
     cursor: pointer;
 }
 
+.navbar ul li.active {
+    background: var(--gradient);
+    border-radius: var(--border);
+    color: var(--bw100);
+}
+
+.navbar ul li.active a {
+    color: var(--bw100);
+}
+
+.navbar ul li.active  .iconBox i {
+    color: var(--bw100);
+}
+
 .mainContent {
-    width: 100%;
+    width: auto;
     margin: 0 10%;
-    margin-left: 30%;
+    margin-left: 35%;
+    padding: 4% 0;
+}
+
+.mainContent .sec1 {
+    width: 100%;
+}
+
+.mainContent .sec1 .boxContainer {
+    display: grid;
+    gap: 20px;
+}
+
+
+.mainContent .sec1 .boxContainer .amountBox {
+    min-width: 150px;
+    box-sizing: border-box;
+    background-color: var(--bw100);
+    border-radius: var(--border);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    box-shadow: var(--boxShadow);
+}
+
+.mainContent .sec1 .boxContainer .amountBox h3 {
+    color: var(--fontColor1);
+    margin: 0;
+}
+
+.mainContent .sec1 .boxContainer .amountBox p {
+    color: var(--fontColor2);
+    margin: 5px;
+    font-weight: 700;
+}
+
+.mainContent .sec1 .titleBox {
+    height: 40px;
+    margin: 20px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.mainContent .sec1 .titleBox h3 {
+    border-left: 8px solid var(--info);
+    padding: 5px 0;
+    padding-left: 10px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+table th {
+    background-color: var(--bw100);
+    font-size: 0.8rem;
+    text-align: left;
+    height: 30px;
+    padding: 5px;
+    padding-left: 20px;
+}
+
+table tr{
+    border-top: 2px solid var(--bgColor);
+    background-color: var(--bw85);
+}   
+
+table tr:nth-child(even){
+    background-color: var(--bw80);
+}
+
+table tr td {
+    font-size: 0.8rem;
+    text-align: left;
+    padding: 5px;
+    padding-left: 20px;
+}
+
+.tableButtonContainer {
+    display: flex;
+    gap: 5px;
+    justify-content: end;
+}
+
+.tableButton {
+    width: 30px;
+    height: 30px;
+    border: none;
+    border-radius: var(--border);
+    color: var(--bw100);
+    cursor: pointer;
 }
