--- a/src/main/resources/templates/person/personList.html
+++ b/src/main/resources/templates/person/personList.html
@@ -3,59 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/7fd798150d.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/global.css}">
+    <link rel="stylesheet" th:href="@{/css/containers.css}">
     <title>Lista de pessoas</title>
 </head>
 <body>
-    <a th:href="@{/}">Voltar</a><br/>
-    <a th:href="@{/person/participantForm}"><button>Cadastrar Participante</button></a><br/><br/>
-    <a th:href="@{/person/attractionForm}"><button>Cadastrar Atração</button></a><br><br>
-
-    <h3>Lista de Participantes</h3>
-    <table>
-        <thead>
-            <tr>
-                <th>Nome</th>
-                <th>Cpf</th>
-                <th>Data de Nascimento</th>
-                <th colspan="2">Ações</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="participant : ${participantList}">
-                <td><a th:href="@{/person/participantProfile/{id}(id=${participant.id})}" th:text="${participant.name}"></a></td>
-                <td th:text="${participant.cpf}"></td>
-                <td th:text="${participant.birthDate}"></td>
-                <td><a th:href="@{/person/updateParticipant/{id}(id=${participant.id})}">Editar</a></td>
-                <td><a th:href="@{/person/deleteParticipant/{id}(id=${participant.id})}">Apagar</a></td>
-
-            </tr>
-        </tbody>
-    </table>
-    <h3>Lista de Atrações</h3>
-    <table>
-        <thead>
-        <tr>
-            <th>Nome</th>
-            <th>Cpf</th>
-            <th>Data de Nascimento</th>
-            <th>Contato</th>
-            <th>Descrição</th>
-            <th colspan="2">Ações</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="attraction : ${attractionList}">
-            <td th:text="${attraction.name}"></td>
-            <td th:text="${attraction.cpf}"></td>
-            <td th:text="${attraction.birthDate}"></td>
-            <td th:text="${attraction.contact}"></td>
-            <td th:text="${attraction.description}"></td>
-            <td><a th:href="@{/person/updateAttraction/{id}(id=${attraction.id})}">Editar</a></td>
-            <td><a th:href="@{/person/deleteAttraction/{id}(id=${attraction.id})}">Apagar</a></td>
-        </tr>
-        </tbody>
-    </table>
-
-    <h3>Lista de Pessoas</h3>
+    <nav class="navbar">
+        <ul>
+            <li class="active"><a th:href="@{/person/personList}"><div class="iconBox"><i class="fa-solid fa-user"></i></div><p>Pessoas</p></a></li>
+            <li><a><div class="iconBox"><i class="fa-solid fa-map-location-dot"></i></div><p>Eventos</p></a></li>
+            <li><a th:href="@{/ticket/ticketList}"><div class="iconBox"><i class="fa-solid fa-ticket"></i></div><p>Ingressos</p></a></li>
+            <li><a><div class="iconBox"><i class="fa-solid fa-comment"></i></div><p>Feedback</p></a></li>
+            <li><a><div class="iconBox"><i class="fa-solid fa-credit-card"></i></div><p>Pagamento</p></a></li>
+        </ul>
+    </nav>
+    <main class="mainContent">
+        <section class="sec1">
+            <div class="boxContainer" style="grid-template-columns: auto auto auto;">
+                <div class="amountBox"><h3>Participantes</h3><p th:text="${participantCount}"></p></div>
+                <div class="amountBox"><h3>Pessoas</h3><p th:text="${personCount}"></p></div>
+                <div class="amountBox"><h3>Atrações</h3><p th:text="${attractionCount}"></p></div>
+            </div>
+            <div class="titleBox">
+                <h3>Participantes</h3>
+                <a th:href="@{/person/participantForm}"><button class="button"><i class="fa-solid fa-plus"></i>Cadastrar participante</button></a>
+            </div>
+            <table>
+                <thead>
+                    <tr>
+                        <th width="40%">Nome</th>
+                        <th width="20%">Cpf</th>
+                        <th>Data de nascimento</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="participant : ${participantList}">
+                        <td th:text="${participant.name}"></td>
+                        <td th:text="${participant.cpf}"></td>
+                        <td th:text="${participant.birthDate}"></td>
+                        <td class="tableButtonContainer">
+                            <a th:href="@{/person/participantProfile/{id}(id=${participant.id})}"><button class="tableButton info"><i class="fa-solid fa-eye"></i></button></a>
+                            <a th:href="@{/person/updateParticipant/{id}(id=${participant.id})}"><button class="tableButton alert"><i class="fa-solid fa-pen-to-square"></i></button></a>
+                            <a th:href="@{/person/deleteParticipant/{id}(id=${participant.id})}"><button class="tableButton danger"><i class="fa-solid fa-trash"></i></button></a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="titleBox">
+                <h3>Atração</h3>
+                <a th:href="@{/person/participantForm}"><button class="button"><i class="fa-solid fa-plus"></i>Cadastrar Atração</button></a>
+            </div>
+            <table>
+                <thead>
+                    <tr>
+                        <th width="40%">Nome</th>
+                        <th width="20%">Cpf</th>
+                        <th>Data de nascimento</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="attraction : ${attractionList}">
+                        <td th:text="${attraction.name}"></td>
+                        <td th:text="${attraction.cpf}"></td>
+                        <td th:text="${attraction.birthDate}"></td>
+                        <td class="tableButtonContainer">
+                            <a th:href="@{/person/updateAttraction/{id}(id=${attraction.id})}"><button class="tableButton alert"><i class="fa-solid fa-pen-to-square"></i></button></a>
+                            <a  th:href="@{/person/deleteAttraction/{id}(id=${attraction.id})}"><button class="tableButton danger"><i class="fa-solid fa-trash"></i></button></a>
+                        </td>
+                    </tr>
+                </tbody>
+                </tbody>
+            </table>
+        </section>
+    </main>
 </body>
 </html>
