--- a/src/main/resources/templates/ticket/ticketList.html
+++ b/src/main/resources/templates/ticket/ticketList.html
@@ -3,33 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de ingressos</title>
+    <script src="https://kit.fontawesome.com/7fd798150d.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/global.css}">
+    <link rel="stylesheet" th:href="@{/css/containers.css}">
+    <title>Lista de pessoas</title>
 </head>
 <body>
-    <a th:href="@{/}">Voltar</a><br/>
-    <a th:href="@{/ticket/ticketForm}"><button>Cadastrar ingresso</button></a><br/><br/>
-
-    <h3>Lista de ingressos</h3>
-    <table>
-        <thead>
-            <tr>
-                <th>Nome do evento</th>
-                <th>Descrição</th>
-                <th>Lote</th>
-                <th>Valor</th>
-                <th colspan="2">Ações</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="ticket : ${ticketList}">
-                <td></td>
-                <td th:text="${ticket.description}"></td>
-                <td th:text="${ticket.batch}"></td>
-                <td th:text="${ticket.amount}"></td>
-                <td><a th:href="@{/ticket/updateTicket/{id}(id=${ticket.id})}">Editar</a></td>
-                <td><a th:href="@{/ticket/deleteTicket/{id}(id=${ticket.id})}">Apagar</a></td>
-            </tr>
-        </tbody>
-    </table>
+    <nav class="navbar">
+        <ul>
+            <li><a th:href="@{/person/personList}"><div class="iconBox"><i class="fa-solid fa-user"></i></div><p>Pessoas</p></a></li>
+            <li><a><div class="iconBox"><i class="fa-solid fa-map-location-dot"></i></div><p>Eventos</p></a></li>
+            <li class="active"><a th:href="@{/ticket/ticketList}"><div class="iconBox"><i class="fa-solid fa-ticket"></i></div><p>Ingressos</p></a></li>
+            <li><a><div class="iconBox"><i class="fa-solid fa-comment"></i></div><p>Feedback</p></a></li>
+            <li><a><div class="iconBox"><i class="fa-solid fa-credit-card"></i></div><p>Pagamento</p></a></li>
+        </ul>
+    </nav>
+    <main class="mainContent">
+        <section class="sec1">
+            <div class="titleBox">
+                <h3>Ingressos</h3>
+                <a th:href="@{/ticket/ticketForm}"><button class="button"><i class="fa-solid fa-plus"></i>Cadastrar ingresso</button></a>
+            </div>
+            <table>
+                <thead>
+                    <tr>
+                        <th width="20%">Nome do evento</th>
+                        <th>Descrição</th>
+                        <th>Lote</th>
+                        <th>Valor</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="ticket : ${ticketList}">
+                        <td></td>
+                        <td th:text="${ticket.description}"></td>
+                        <td th:text="${ticket.batch}"></td>
+                        <td th:text="${ticket.amount}"></td>
+                        <td class="tableButtonContainer">
+                            <a th:href="@{/ticket/updateTicket/{id}(id=${ticket.id})}"><button class="tableButton alert"><i class="fa-solid fa-pen-to-square"></i></button></a>
+                            <a th:href="@{/ticket/deleteTicket/{id}(id=${ticket.id})}"><button class="tableButton danger"><i class="fa-solid fa-trash"></i></button></a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </main>
 </body>
 </html>
