feat: add event's CRUD and eventList page

--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -6,7 +6,7 @@
     --alert: #F5A555;
     --success: #75F555;
     --info: #559EF5;
-    --info2: #DE55F5;
+    --info2: #744f78;
     --bw30: #4D4D4D;
     --bw50: #808080;
     --bw80: #CCCCCC;
