--- a/src/main/resources/templates/event/eventList.html
+++ b/src/main/resources/templates/event/eventList.html
@@ -80,8 +80,8 @@
                 <h2 th:text="${event.name}" class="whiteText"></h2>
             </div>
             <div class="footerCard">
-                <a th:href="@{/event/eventForm}"
-                ><button class="button">
+                <a th:href="@{/subEvent/subEventList/{id}(id=${event.id})}"
+                ><button class="button2">
                   Cadastrar sub-evento
                 </button></a
               >
