refact: deactivate event and subEvents instead delete. feat: cascading deativation of events

--- a/src/main/resources/templates/event/eventForm.html
+++ b/src/main/resources/templates/event/eventForm.html
@@ -29,6 +29,12 @@
           th:field="*{id}"
           th:value="${event.id} ? ${event.id} : ''"
         />
+        <input
+          type="hidden"
+          th:field="*{active}"
+          th:value="${event.active} ? ${event.active} : true"
+        />
+
         <p>Nome do evento:</p>
         <input
           type="text"
