--- a/src/main/resources/static/css/containers.css
+++ b/src/main/resources/static/css/containers.css
@@ -114,18 +114,28 @@ ul {
   justify-content: space-between;
 }
 
+.contentCardBox{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.titleText{
+  border-left: 8px solid var(--info);
+  padding: 5px 0;
+  padding-left: 10px;
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  margin-bottom: 20px;
+}
+
 .titleBox2 {
   height: 40px;
   margin: 20px 0;
   display: flex;
   align-items: center;
-}
-
-.titleBox2 h1 {
-  padding: 5px 0;
-  padding-left: 10px;
-  display: flex;
-  margin: 0;
 }
 
 .mainContent .sec1 .titleBox h3 {
@@ -142,6 +152,18 @@ ul {
   flex-direction: column;
   justify-content: space-between;
   background-color: #955d94;
+  padding: 15px;
+  border-radius: 10px;
+  height: 150px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  margin-bottom: 20px;
+}
+
+.eventCard2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #559EF5;
   padding: 15px;
   border-radius: 10px;
   height: 150px;
