--- a/src/main/resources/templates/event/eventList.html
+++ b/src/main/resources/templates/event/eventList.html
@@ -47,8 +47,14 @@
           >
         </li>
         <li>
-          <a
+          <a th:href="@{/creditCard/creditCardDetails}"
             ><div class="iconBox"><i class="fa-solid fa-credit-card"></i></div>
+            <p>Cartão de crédito</p></a
+          >
+        </li>
+        <li>
+          <a
+            ><div class="iconBox"><i class="fa-solid fa-money-bill"></i></div>
             <p>Pagamento</p></a
           >
         </li>
