--- a/src/main/resources/templates/person/personList.html
+++ b/src/main/resources/templates/person/personList.html
@@ -17,7 +17,7 @@
             <li class="active"><a th:href="@{/person/personList}"><div class="iconBox"><i class="fa-solid fa-user"></i></div><p>Pessoas</p></a></li>
             <li><a th:href="@{/event/eventList}"><div class="iconBox"><i class="fa-solid fa-map-location-dot"></i></div><p>Eventos</p></a></li>
             <li><a th:href="@{/ticket/ticketList}"><div class="iconBox"><i class="fa-solid fa-ticket"></i></div><p>Ingressos</p></a></li>
-            <li><a><div class="iconBox"><i class="fa-solid fa-comment"></i></div><p>Feedback</p></a></li>
+            <li><a th:href="@{/feedback/feedbackList}"><div class="iconBox"><i class="fa-solid fa-comment"></i></div><p>Feedback</p></a></li>
             <li><a><div class="iconBox"><i class="fa-solid fa-credit-card"></i></div><p>Pagamento</p></a></li>
         </ul>
     </nav>
