--- a/src/main/resources/templates/person/participantProfile.html
+++ b/src/main/resources/templates/person/participantProfile.html
@@ -1,22 +1,79 @@
 <!DOCTYPE html>
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>perfil da pessoa</title>
-</head>
-<body>
-    <a th:href="@{/person/personList}">Voltar</a><br/>
-
-    <h3>Participante</h3><br/>
-    <p th:text="${participant.name}"></p>
-    <p th:text="${participant.cpf}"></p>
-    <p th:text="${participant.birthDate}"></p>
-    <h3>Ingressos</h3>
-    <div th:each="ticket : ${ticketList}" style="width: 500px; border: 1px solid black; border-radius: 10px; margin-bottom: 20px;">
-        <p>Descrição: <span th:text="${ticket.description}"></span></p>
-        <p>Lote: <span th:text="${ticket.batch}"></span></p>
-        <p>Valor: <span th:text="${ticket.amount}"></span></p>
-    </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/7fd798150d.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" th:href="@{/css/global.css}" />
+    <link rel="stylesheet" th:href="@{/css/containers.css}" />
+    <!--<link rel="stylesheet" th:href="@{/js/ticketFormScript.js}" />-->
+    <title>Formulário de participante</title>
+  </head>
+  <body id="ticketForm">
+    <nav class="navbar">
+      <ul>
+        <li class="active">
+          <a th:href="@{/person/personList}"
+            ><div class="iconBox"><i class="fa-solid fa-user"></i></div>
+            <p>Pessoas</p></a
+          >
+        </li>
+        <li>
+          <a th:href="@{/event/eventList}"
+            ><div class="iconBox">
+              <i class="fa-solid fa-map-location-dot"></i>
+            </div>
+            <p>Eventos</p></a
+          >
+        </li>
+        <li>
+          <a th:href="@{/ticket/ticketList}"
+            ><div class="iconBox"><i class="fa-solid fa-ticket"></i></div>
+            <p>Ingressos</p></a
+          >
+        </li>
+        <li>
+          <a th:href="@{/feedback/feedbackList}"
+            ><div class="iconBox"><i class="fa-solid fa-comment"></i></div>
+            <p>Feedback</p></a
+          >
+        </li>
+        <li>
+          <a
+            ><div class="iconBox"><i class="fa-solid fa-credit-card"></i></div>
+            <p>Pagamento</p></a
+          >
+        </li>
+      </ul>
+    </nav>
+    <main class="mainContent">
+      <section class="sec1">
+        <div class="titleBox2">
+          <a th:href="@{/person/personList}">
+            <i class="fa-solid fa-arrow-left fa-2x" style="color: var(--info); "></i>
+          </a>
+          <h1>Participante</h1>
+        </div>
+        <p th:text="${participant.name}"></p>
+        <p th:text="${participant.cpf}"></p>
+        <p th:text="${participant.birthDate}"></p>
+        <h3>Ingressos</h3>
+        <div th:each="ticket : ${participant.ticketList}" style="width: 500px; border: 1px solid black; border-radius: 10px; margin-bottom: 20px;">
+          <p>Descrição: <span th:text="${ticket.description}"></span></p>
+          <p>Lote: <span th:text="${ticket.batch}"></span></p>
+          <p>Valor: <span th:text="${ticket.amount}"></span></p>
+          <a th:href="@{/feedback/feedbackForm/{participantId}/{ticketId}(participantId=${participant.id},ticketId=${ticket.id})}"><button>Adicionar comentário</button></a>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
