--- a/src/main/resources/templates/ticket/ticketForm.html
+++ b/src/main/resources/templates/ticket/ticketForm.html
@@ -1,23 +1,94 @@
 <!DOCTYPE html>
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de ingresso</title>
-</head>
-<body>
-<a th:href="@{/ticket/ticketList}">Voltar</a><br/><br/>
-Formulário de participantes
-<form th:action="${method} == 'save' ? @{/ticket/addTicket} : @{/ticket/updateTicket}" th:object="${ticket}" method="post">
-    <input type="hidden" th:field="*{id}" th:value="${ticket.id} ? ${ticket.id} : ''" />
-    <p>Descrição:</p>
-    <input type="text" th:field="*{description}" th:value="${ticket.description} ? ${ticket.description} : ''" name="description"/>
-    <p>Lote:</p>
-    <input type="text" th:field="*{batch}" th:value="${ticket.batch} ? ${ticket.batch} : ''" name="batch"/>
-    <p>Valor:</p>
-    <input type="number" th:field="*{amount}" th:value="${ticket.amount} ? ${ticket.amount} : ''" name="amount"/><br/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/7fd798150d.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" th:href="@{/css/global.css}" />
+    <link rel="stylesheet" th:href="@{/css/containers.css}" />
+    <!--<link rel="stylesheet" th:href="@{/js/ticketFormScript.js}" />-->
+    <title>Formulário de SubEventos</title>
+  </head>
+  <body id="ticketForm">
+    <nav class="navbar">
+      <ul>
+        <li>
+          <a th:href="@{/person/personList}"
+            ><div class="iconBox"><i class="fa-solid fa-user"></i></div>
+            <p>Pessoas</p></a
+          >
+        </li>
+        <li>
+          <a th:href="@{/event/eventList}"
+            ><div class="iconBox">
+              <i class="fa-solid fa-map-location-dot"></i>
+            </div>
+            <p>Eventos</p></a
+          >
+        </li>
+        <li class="active">
+          <a th:href="@{/ticket/ticketList}"
+            ><div class="iconBox"><i class="fa-solid fa-ticket"></i></div>
+            <p>Ingressos</p></a
+          >
+        </li>
+        <li>
+          <a
+            ><div class="iconBox"><i class="fa-solid fa-comment"></i></div>
+            <p>Feedback</p></a
+          >
+        </li>
+        <li>
+          <a
+            ><div class="iconBox"><i class="fa-solid fa-credit-card"></i></div>
+            <p>Pagamento</p></a
+          >
+        </li>
+      </ul>
+    </nav>
+    <main class="mainContent">
+      <section class="sec1">
+        <div class="titleBox2">
+          <a th:href="@{/ticket/ticketList}">
+            <i class="fa-solid fa-arrow-left fa-2x" style="color: var(--info); "></i>
+          </a>
+          <h1>Cadastro de ingresso</h1>
+        </div>
 
-    <button type="submit">Enviar</button>
-</form>
-</body>
+        <form th:action="${method} == 'save' ? @{/ticket/addTicket} : @{/ticket/updateTicket}" th:object="${ticket}" method="post">
+          <input type="hidden" th:field="*{id}" th:value="${ticket.id} ? ${ticket.id} : ''" />
+          <p>Descrição:</p>
+          <input type="text" th:field="*{description}" th:value="${ticket.description} ? ${ticket.description} : ''" name="description"/>
+          <p>Lote:</p>
+          <input type="text" th:field="*{batch}" th:value="${ticket.batch} ? ${ticket.batch} : ''" name="batch"/>
+          <p>Valor:</p>
+          <input type="number" th:field="*{amount}" th:value="${ticket.amount} ? ${ticket.amount} : ''" name="amount"/><br/>
+          <p>Evento:</p>
+          <select name="event" id="event">
+            <option th:each="event : ${eventList}" th:value="${event.id}" th:text="${event.name}"></option>
+          </select>
+          <br/>
+          <div th:each="event : ${eventList}" th:id="'event-' + ${event.id}" >
+            <h4 th:text="${event.name}"></h4>
+            <div th:each="subEvent : ${event.subEvents}">
+              <input type="checkbox" th:name="subEventIdList" th:value="${subEvent.id}"/><span th:text="${subEvent.name}"></span><br/>
+            </div>
+          </div><br/>
+
+
+
+          <button type="submit" class="button">Salvar</button>
+        </form>
+      </section>
+    </main>
+  </body>
 </html>
