--- a/src/main/resources/templates/event/eventInfo.html
+++ b/src/main/resources/templates/event/eventInfo.html
@@ -20,15 +20,44 @@
   <body>
     <nav class="navbar">
       <ul>
-        <li><a th:href="@{/person/personList}"><div class="iconBox"><i class="fa-solid fa-user"></i></div><p>Pessoas</p></a></li>
-        <li class="active"><a th:href="@{/event/eventList}"><div class="iconBox"><i class="fa-solid fa-map-location-dot"></i></div><p>Eventos</p></a></li>
-        <li><a th:href="@{/ticket/ticketList}"><div class="iconBox"><i class="fa-solid fa-ticket"></i></div><p>Ingressos</p></a></li>
-        <li><a th:href="@{/feedback/feedbackList}"><div class="iconBox"><i class="fa-solid fa-comment"></i></div><p>Feedback</p></a></li>
-        <li><a th:href="@{/creditCard/creditCardDetails}">
-          <div class="iconBox"><i class="fa-solid fa-credit-card"></i></div>
-          <p>Cartão de crédito</p>
-        </a></li>
-        <li><a><div class="iconBox"><i class="fa-solid fa-money-bill"></i></div><p>Pagamento</p></a></li>
+        <li>
+          <a th:href="@{/person/personList}"
+            ><div class="iconBox"><i class="fa-solid fa-user"></i></div>
+            <p>Pessoas</p></a
+          >
+        </li>
+        <li class="active">
+          <a th:href="@{/event/eventList}"
+            ><div class="iconBox">
+              <i class="fa-solid fa-map-location-dot"></i>
+            </div>
+            <p>Eventos</p></a
+          >
+        </li>
+        <li>
+          <a th:href="@{/ticket/ticketList}"
+            ><div class="iconBox"><i class="fa-solid fa-ticket"></i></div>
+            <p>Ingressos</p></a
+          >
+        </li>
+        <li>
+          <a th:href="@{/feedback/feedbackList}"
+            ><div class="iconBox"><i class="fa-solid fa-comment"></i></div>
+            <p>Feedback</p></a
+          >
+        </li>
+        <li>
+          <a th:href="@{/creditCard/creditCardDetails}">
+            <div class="iconBox"><i class="fa-solid fa-credit-card"></i></div>
+            <p>Cartão de crédito</p>
+          </a>
+        </li>
+        <li>
+          <a
+            ><div class="iconBox"><i class="fa-solid fa-money-bill"></i></div>
+            <p>Pagamento</p></a
+          >
+        </li>
       </ul>
     </nav>
     <main class="mainContent">
@@ -40,7 +69,7 @@
               style="color: var(--info)"
             ></i>
           </a>
-          <h1 th:text="${event.name}" style="margin-left: 15px;"></h1>
+          <h1 th:text="${event.name}" style="margin-left: 15px"></h1>
         </div>
         <div>
           <div>
@@ -84,35 +113,48 @@
           </div>
         </div>
         <h3 th:text="'Sub-Eventos de ' + ${event.name}" class="titleText"></h3>
-        <div th:each="subEvent : ${event.subEvents}">
-          <div class="eventCard2" style="cursor: pointer">
-            <header class="headerCard">
-              <span
-                th:text="${#temporals.format(subEvent.hours, 'dd/MM HH') + 'h'}"
-                class="whiteText"
-              ></span>
-              <div>
-                <a th:href="@{/subEvent/updateSubEvent/{id}(id=${subEvent.id})}"
-                  ><button class="tableButton alert">
-                    <i class="fa-solid fa-pen-to-square"></i></button
-                ></a>
-                <a th:href="@{/subEvent/deleteSubEvent/{id}(id=${subEvent.id})}"
-                  ><button class="tableButton danger">
-                    <i class="fa-solid fa-trash"></i></button
-                ></a>
+        <th:block th:if="${event.subEvents.size() != 0}">
+          <div th:each="subEvent : ${event.subEvents}">
+            <div class="eventCard2" style="cursor: pointer">
+              <header class="headerCard">
+                <span
+                  th:text="${#temporals.format(subEvent.hours, 'dd/MM HH') + 'h'}"
+                  class="whiteText"
+                ></span>
+                <div>
+                  <a
+                    th:href="@{/subEvent/updateSubEvent/{id}(id=${subEvent.id})}"
+                    ><button class="tableButton alert">
+                      <i class="fa-solid fa-pen-to-square"></i></button
+                  ></a>
+                  <a
+                    th:href="@{/subEvent/deleteSubEvent/{id}(id=${subEvent.id})}"
+                    ><button class="tableButton danger">
+                      <i class="fa-solid fa-trash"></i></button
+                  ></a>
+                </div>
+              </header>
+              <div class="contentCard">
+                <div class="contentCardBox">
+                  <span
+                    th:text="${subEvent.name}"
+                    class="whiteText"
+                    style="font-size: 25px"
+                  ></span>
+                  <span th:text="${subEvent.type}" class="whiteText"></span>
+                </div>
               </div>
-            </header>
-            <div class="contentCard">
-              <div class="contentCardBox">
-                <span th:text="${subEvent.name}" class="whiteText"  style="font-size: 25px;"></span>
-                <span th:text="${subEvent.type}" class="whiteText"></span>
+              <div class="footerCard">
+                <span th:text="${subEvent.location}" class="whiteText"></span>
               </div>
-            </div>
-            <div class="footerCard">
-              <span th:text="${subEvent.location}" class="whiteText"></span>
             </div>
           </div>
-        </div>
+        </th:block>
+        <th:block th:unless="${event.subEvents.size() != 0}">
+          <div class="container">
+            <h2 style="margin-top: 30px">Nenhum sub-evento cadastrado.</h2>
+          </div>
+        </th:block>
       </section>
     </main>
   </body>
