--- a/src/main/resources/templates/person/personList.html
+++ b/src/main/resources/templates/person/personList.html
@@ -60,7 +60,7 @@
             </table>
             <div class="titleBox">
                 <h3>Atração</h3>
-                <a th:href="@{/person/participantForm}"><button class="button"><i class="fa-solid fa-plus"></i>Cadastrar Atração</button></a>
+                <a th:href="@{/person/attractionForm}"><button class="button"><i class="fa-solid fa-plus"></i>Cadastrar Atração</button></a>
             </div>
             <table>
                 <thead>
