--- a/src/main/resources/templates/ticket/ticketForm.html
+++ b/src/main/resources/templates/ticket/ticketForm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,10 +15,28 @@
     />
     <link rel="stylesheet" th:href="@{/css/global.css}" />
     <link rel="stylesheet" th:href="@{/css/containers.css}" />
-    <!--<link rel="stylesheet" th:href="@{/js/ticketFormScript.js}" />-->
+    <script th:inline="javascript">
+      window.addEventListener("load", main);
+
+      function main(){
+        const eventSelect = document.getElementById("event");
+        eventSelect.addEventListener("change", changeEvent);
+        function changeEvent(e){
+
+          let eventBox = document.getElementById("eventBox");
+          let subEvent = document.getElementById("event-"+e.target.value);
+
+          for (const child of eventBox.children) {
+            if(child.classList.contains("showSubEventCheckbox")) child.classList.remove("showSubEventCheckbox");
+          }
+
+          subEvent.classList.add("showSubEventCheckbox");
+        }
+      }
+    </script>
     <title>Formulário de SubEventos</title>
   </head>
-  <body id="ticketForm">
+  <body>
     <nav class="navbar">
       <ul>
         <li><a th:href="@{/person/personList}"><div class="iconBox"><i class="fa-solid fa-user"></i></div><p>Pessoas</p></a></li>
@@ -44,20 +62,25 @@
         <form th:action="${method} == 'save' ? @{/ticket/addTicket} : @{/ticket/updateTicket}" th:object="${ticket}" method="post">
           <input type="hidden" th:field="*{id}" th:value="${ticket.id} ? ${ticket.id} : ''" />
           <p>Descrição:</p>
-          <input type="text" th:field="*{description}" th:value="${ticket.description} ? ${ticket.description} : ''" name="description"/>
+          <textarea width="100%" th:field="*{description}" th:value="${ticket.description} ? ${ticket.description} : ''" name="description"/></textarea>
           <p>Lote:</p>
           <input type="text" th:field="*{batch}" th:value="${ticket.batch} ? ${ticket.batch} : ''" name="batch"/>
           <p>Valor:</p>
           <input type="number" th:field="*{amount}" th:value="${ticket.amount} ? ${ticket.amount} : ''" name="amount"/><br/>
           <p>Evento:</p>
-          <select name="event" id="event">
+          <select name="event" id="event" >
             <option th:each="event : ${eventList}" th:value="${event.id}" th:text="${event.name}"></option>
           </select>
           <br/>
-          <div th:each="event : ${eventList}" th:id="'event-' + ${event.id}" >
-            <h4 th:text="${event.name}"></h4>
-            <div th:each="subEvent : ${event.subEvents}">
-              <input type="checkbox" th:name="subEventIdList" th:value="${subEvent.id}"/><span th:text="${subEvent.name}"></span><br/>
+          <div id="eventBox">
+            <div th:each="event : ${eventList}" th:id="'event-' + ${event.id}" th:class="${event.id == eventList[0].id ? 'subEventCheckbox showSubEventCheckbox' : 'subEventCheckbox'}">
+              <h4 th:text="${event.name}"></h4>
+              <div>
+                <div th:each="subEvent : ${event.subEvents}">
+                  <input type="checkbox" th:name="subEventIdList" th:value="${subEvent.id}"/>
+                  <span th:text="${subEvent.name}"></span><br/>
+                </div>
+              </div>
             </div>
           </div><br/>
 
