feat: Attraction POST added

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,6 @@
     <title>Index</title>
 </head>
 <body>
-<a th:href="@{/person/personList}">Lista de pessoas</a><br/>
-<a th:href="@{/ticket/ticketList}">Lista de ingressos</a>
+<a th:href="@{/swagger-ui/index.html}">Acessar swagger</a><br/>
 </body>
 </html>
